--- a/RainLexer/RainLexer.vcxproj.filters
+++ b/RainLexer/RainLexer.vcxproj.filters
@@ -18,22 +18,22 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\scintilla\lexlib\LexerBase.cxx">
+    <ClCompile Include="..\ThirdParty\Scintilla\lexlib\LexerBase.cxx">
       <Filter>Scintilla</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\scintilla\lexlib\WordList.cxx">
+    <ClCompile Include="..\ThirdParty\Scintilla\lexlib\WordList.cxx">
       <Filter>Scintilla</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\scintilla\lexlib\LexerSimple.cxx">
+    <ClCompile Include="..\ThirdParty\Scintilla\lexlib\LexerSimple.cxx">
       <Filter>Scintilla</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\scintilla\lexlib\Accessor.cxx">
+    <ClCompile Include="..\ThirdParty\Scintilla\lexlib\Accessor.cxx">
       <Filter>Scintilla</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\scintilla\lexlib\LexerModule.cxx">
+    <ClCompile Include="..\ThirdParty\Scintilla\lexlib\LexerModule.cxx">
       <Filter>Scintilla</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\scintilla\lexlib\PropSetSimple.cxx">
+    <ClCompile Include="..\ThirdParty\Scintilla\lexlib\PropSetSimple.cxx">
       <Filter>Scintilla</Filter>
     </ClCompile>
     <ClCompile Include="Lexer.cpp">
