--- a/RainLexer/RainLexer.vcxproj
+++ b/RainLexer/RainLexer.vcxproj
@@ -42,6 +42,12 @@
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <OutDir Condition=" '$(Platform)' == 'Win32' ">$(SolutionDir)x32-$(Configuration)\</OutDir>
+    <OutDir Condition=" '$(Platform)' == 'x64' ">$(SolutionDir)x64-$(Configuration)\</OutDir>
+    <IntDir>$(OutDir)Obj\$(ProjectName)\</IntDir>
+  </PropertyGroup>
+
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
@@ -104,6 +110,7 @@
       <AdditionalOptions>/Gw %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
       <MergeSections>.rdata=.text</MergeSections>
       <OptimizeReferences>true</OptimizeReferences>
