--- a/RainLexer/RainLexer.vcxproj.filters
+++ b/RainLexer/RainLexer.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="StdAfx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\ThirdParty\Scintilla\lexlib\PropSetSimple.cxx">
+      <Filter>Scintilla</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Exports.def">
